[tool.poetry]
name = "libs"
version = "0.1.0"
description = ""
authors = ["YukiY <kntk7@outlook.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"

[tool.poetry.group.ci.dependencies]
pre-commit = "^3.4.0"
safety = "^2.3.5"
codespell = "^2.2.5"
black = "^23.7.0"
autoflake = "^2.2.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
bandit = "^1.7.5"
mypy = "^1.5.1"
pylint = "^2.17.5"
pyupgrade = "^3.10.1"
blacken-docs = "^1.16.0"

[tool.bandit]
